--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
+
 {
-  "name": "crm-backend-tiny",
+  "name": "supervisor-alerta-suri",
   "version": "1.0.0",
-  "description": "Backend para integra\u00e7\u00e3o de propostas comerciais com Tiny ERP",
-  "main": "server.js",
+  "description": "Agente supervisor que envia alertas via SURI",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
-  "keywords": [
-    "crm",
-    "tiny",
-    "api",
-    "backend",
-    "integracao"
-  ],
-  "author": "LumiereGyn",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.4",
-    "xlsx": "^0.18.5"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
